--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: DHome - Intranet Smarthome
+description: DHome is intranet of things smarthome ecosystem full of useful devices
