--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-cayman
 title: DHome - Intranet Smarthome
+show_downloads: false
 description: DHome is intranet of things smarthome ecosystem full of useful devices
